# Toolfus

./: .gitignore  .pre-commit-config.yaml  App.xaml  App.xaml.cs  Form1.Designer.cs  Form1.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  README.md  Toolfus.sln  Toolfus.spec  ToolfusDll.pyi  ToolfusDll.sln  bash.exe.stackdump  main.py  pyproject.toml  test.py
.github/workflows/: dotnet-core.yml  release.yml
Toolfus/: .gitignore  AccountWindow.xaml  AccountWindow.xaml.cs  App.config  App.xaml  App.xaml.cs  ChatPage.xaml  ChatWindow.xaml  ChatWindow.xaml.cs  ClickDetector.cs  ClickSimulator.cs  Data.cs  Keybind.cs  KeymapPage.xaml  KeymapPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  OptionsWindow.xaml  OptionsWindow.xaml.cs  Toolfus.csproj  WindowUtils.cs  packages.config
Toolfus/Properties/: AssemblyInfo.cs  Resources.Designer.cs
ToolfusDll/: ClickUtils.cs  ToolfusDll.csproj
WindowsDll/: ClickUtils.cs  WindowUtils.cs
src/: __init__.py
src/engine/: __init__.py  listener.py  mouse.py  shortcut.py  team.py  ui_preferences.py  utils.py
src/gui/: main_window.py
src/gui/components/: character.py  shortcut_input.py
src/gui/layouts/: settings.py  team.py
src/gui/widgets/: shortcut.py  tray_icon.py
src/models/: activation_changer.py  job_icon.py  window_character.py
